<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
       >

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_old_password"
        android:layout_marginTop="24dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        >

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ti_new_password"
        android:layout_alignParentStart="true"
        android:text="@string/change_password"
        android:layout_marginTop="24dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ti_new_password"
        android:text="@string/cancel"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <TextView
        android:id="@+id/tv_message"
        android:visibility="gone"
        android:layout_below="@+id/btn_change_password"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:indeterminate="true"
        android:layout_below="@+id/tv_message"/>

</RelativeLayout>