<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorDarkGrey">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableEnd="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_token"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_email"
        android:layout_marginTop="24dp">

        <EditText
            android:id="@+id/et_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/token"
            android:drawableEnd="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_password"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_token"
        android:layout_marginTop="24dp"
        app:passwordToggleTint="@android:color/white"
        >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ti_password"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_password"
        android:layout_marginTop="24dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>


    <TextView
        android:id="@+id/tv_message"
        android:visibility="gone"
        android:layout_below="@+id/btn_reset_password"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:indeterminate="true"
        android:layout_below="@+id/tv_message"/>

</RelativeLayout>